npm包的版本管理，特别需要注意兼容性，不能随意使用~和和^在版本号

--- a/package.json
+++ b/package.json
@@ -16,7 +16,7 @@
     "@antv/g2": "^3.4.5",
     "axios": "^0.18.0",
     "babel-polyfill": "^6.26.0",
-    "element-ui": "^2.4.11",
+    "element-ui": "2.4.11",
     "es6-promise": "^4.2.5",
     "lodash.debounce": "^4.0.8",
     "lodash.throttle": "^4.1.1",
